--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -17,6 +17,7 @@
         android:textColor="@color/black"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:gravity="center"
+        />
 
 </LinearLayout>
